[package]
name = "bambu-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.1"
bytes = "1.9.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
memchr = "2.7.4"
once_cell = "1.20.2"
rustls = "0.23.21"
smallvec = "1.13.2"
tokio = { version = "1.43.0", features = ["net", "rt", "sync", "io-util", "rt-multi-thread", "tokio-macros"] }
tokio-rustls = { version = "0.26.1", default-features = false, features = ["tls12", "logging"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
turbojpeg = { version = "1.2.1", features = ["image"] }
