[package]
name = "bambu"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Rust crate that provides a high-level API for interacting with the BambuLab 3D printers."

[dependencies]
anyhow = "1.0.95"
async-stream = "0.3.6"
async-tls = "0.13.0"
bytes = "1.9.0"
chrono = "0.4.39"
futures-core = "0.3.31"
futures-util = {version = "0.3.31", features = ["sink"] }
memchr = "2.7.4"
rumqttc = { version = "0.24.0", git = "https://github.com/bytebeamio/rumqtt/", branch = "main" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
smallvec = "1.13.2"
smol_str = { version = "0.3.2", features = ["serde"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["net", "rt", "sync", "io-util", "fs", "rt-multi-thread", "tokio-macros"] }
tokio-rustls = { version = "0.26.1", default-features = false, features = ["tls12", "logging"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.13", features = ["codec"] }

[dev-dependencies]
turbojpeg = { version = "1.2.1", features = ["image"] }
axum = "0.8.1"
